--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <a href="https://instagram.com/pujachowdhury702?igshid=MmU2YjMzNjRlOQ"><i class='bx bxl-instagram-alt' ></i></i></a>
                 <a href="https://www.linkedin.com/in/sovona-chowdhury-720018250"><i class='bx bxl-linkedin' ></i></a>
             </div>
-            <a href="#" class="btn">Download CV</a>
+            <a href="images/CV.pdf" class="btn">Download CV</a>
         </div>
 
         <div class="home-img">
@@ -102,27 +102,27 @@
             <div class="projects-box">
                 <img src="images/portfolio1.jpg" alt="">
                 <div class="projects-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, esse!</p>
-                    <a href="#"><i class='bx bx-link-external' ></i></a>
+                    <h4>Temperature Converter</h4>
+                    <p>Check out this fully functional Temperature Converter made using HTML, CSS and JavaScript</p>
+                    <a href="https://github.com/SovonaChowdhury/Temperature"><i class='bx bx-link-external' ></i></a>
                 </div>
             </div>
 
             <div class="projects-box">
                 <img src="images/portfolio2.jpg" alt="">
                 <div class="projects-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, esse!</p>
-                    <a href="#"><i class='bx bx-link-external' ></i></a>
+                    <h4>Portfolio</h4>
+                    <p>Check out this simple and elegant Portfolio website</p>
+                    <a href="https://github.com/SovonaChowdhury/Portfolio"><i class='bx bx-link-external' ></i></a>
                 </div>
             </div>
 
             <div class="projects-box">
                 <img src="images/portfolio3.jpg" alt="">
                 <div class="projects-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, esse!</p>
-                    <a href="#"><i class='bx bx-link-external' ></i></a>
+                    <h4>Netflix</h4>
+                    <p>Check out this Netflix Clone Home page made using HTML, CSS and JavaScript</p>
+                    <a href="https://github.com/SovonaChowdhury/Netflix"><i class='bx bx-link-external' ></i></a>
                 </div>
             </div>
 
